@@ -1,3 +1,12 @@
+2004-05-17  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b123
+
+  * Change: Adjust Layout of upgrade_albums
+
+  * Fix: Removed unneeded htmlentity stuff in edit_appearance.php 
+	       which caused troubled in unsupported charsets.
+
+  * Change: Some translation related changes.
+
 2004-05-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b122
 
 	* Fixed a typo since -b112 in captionator.php that was preventing the
